FIX: removed "visibility:hidden" for class.hidden

--- a/wp-content/themes/cb-std-sys/css/style.css
+++ b/wp-content/themes/cb-std-sys/css/style.css
@@ -236,7 +236,7 @@ nav.pagination a[rel="next"]{ float:right;}
 
 /* =========================HTML5 BOILERPLATE HELPER CLASSES=========================*/
 .social-imr, .ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
-.hidden, .wpcf7-display-none { display: none; visibility: hidden; }
+.hidden, .wpcf7-display-none { display: none; }
 .visuallyhidden, .logged-in .social-label { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
